# faster-orchard

./: .gitignore  CMakeLists.txt
include/: game.hpp  strategies.hpp
src/: game.cpp  main.cpp  strategies.cpp
